# ai-ml-usecases

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FILES_CREATED.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  create_case_studies.py  pyproject.toml  requirements-dev.txt
01_recommendation-systems/01_netflix-recommendations/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
01_recommendation-systems/02_ecommerce-recommendations/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
01_recommendation-systems/03_realtime-personalization/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
02_classification/01_fraud-detection/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
02_classification/02_spam-detection/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
02_classification/03_fake-news-detection/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
03_time-series-forecasting/01_demand-forecasting/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
03_time-series-forecasting/02_anomaly-detection/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
04_nlp/01_sentiment-analysis/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
04_nlp/02_named-entity-recognition/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
04_nlp/03_document-similarity/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
05_computer-vision/01_object-detection/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
05_computer-vision/02_image-classification/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
06_clustering-unsupervised/01_customer-segmentation/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
06_clustering-unsupervised/02_behavioral-anomaly-detection/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
07_ml-system-design/01_end-to-end-pipeline/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
07_ml-system-design/02_ab-testing-framework/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
07_ml-system-design/03_model-serving-at-scale/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
08_generative-ai-llms/01_text-to-sql/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
08_generative-ai-llms/02_rag-system/: README.md  evaluation.md  interview_questions.md  problem_statement.md  requirements.txt  solution_approach.md  trade_offs.md
common/: __init__.py  data_validation.py  metrics.py  model_base.py
docs/: glossary.md  interview-framework.md  ml-system-design-guide.md  resources.md
templates/: case-study-template.md
(+149 files in other folders)
